kubernates/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-app
  template:
    metadata:
      labels:
        app: rest-app
    spec:
      containers:
      - name: rest
        image: ravi8881/ravi-ravisuborg-ravidevenv-ravigraphid2-rest:latest
        ports:
        - containerPort: 8081
