kubernates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector:
    app: rest-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
