kubernates/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: rest-app
spec:
  ingressClassName: ngrok
  rules:
    - host: honestly-handy-herring.ngrok-free.app
      http:
        paths:
          - path: /febe-rest
            pathType: Prefix
            backend:
              service:
                name: rest-service
                port:
                  number: 80
